--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "tiagosampaio/telegram-bot-php",
+  "name": "amida-software/telegram-bot-php",
   "description": "The easiest way to integrate your PHP application with Telegram Bots.",
   "type": "library",
   "keywords": ["telegram", "sdk", "telegram-bot"],
@@ -12,9 +12,9 @@
   ],
   "minimum-stability": "stable",
   "require": {
-    "php":"^7.0",
+    "php":"^7.0|^8.0",
     "php-di/php-di": "^6.0",
-    "guzzlehttp/guzzle": "^6.3",
+    "guzzlehttp/guzzle": "^6.3|^7.0",
     "tiagosampaio/data-object": "dev-master"
   },
   "require-dev": {
